--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400;0,500;0,600;1,300&display=swap"
       rel="stylesheet" />
+    <link rel="manifest" href="./manifest.json" />
+    <script type="module" data-skip-moving="true">
+      import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
+      const el = document.createElement('pwa-update');
+      document.body.appendChild(el);
+    </script>
   </head>
   <body>
     <!-- Erbol Sultanov -->
@@ -87,5 +93,6 @@
     </div>
     <script src="https://kit.fontawesome.com/90114b954f.js" crossorigin="anonymous" defer></script>
     <script src="./app.js" defer></script>
+    <script src="/pwabuilder-sw-register.js"></script>
   </body>
 </html>
